# Marathon-Simulation

./: .dockerignore  .gitignore  Complex_Simulation.py  ControlTest.ipynb  DataAnalysis.ipynb  DataClasses.py  DataRetriever.py  Dockerfile  Dockerfile_Simulation  IndividualRuns.ipynb  Kellner_Simulation.py  MVP_Fatigue.ipynb  MachineLearning.ipynb  MathematicalModel.ipynb  OverallPerformance.ipynb  README.md  RunRetriever.py  Runs.Dockerfile  Simulation.Dockerfile  Simulation.py  Simulations.Dockerfile  Trainings.Dockerfile  data_retriever.py  docker-compose.yml  globals.json  machine_learning_test.ipynb  main.py  model_fit.py  monte_carlo_simulation.py  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements-runs.txt  requirements-sim.txt  requirements-train.txt  requirements.txt  retrieve_data.py  retrieve_run.py  retrieve_running_data.py  run_simulation.py  (+5 more)
.github/workflows/: ci.yml  cloud.yml  run.yml  simulation.yml  train.yml
API/: Strava.py  VisualCrossing.py
DataScience/: ProcessData.py
archive/: retrieve_running_data.py  retrieve_weather_data.py  run_data.py
config/: constants.yml  parameters.yml  units.yml
notebooks/: machine_learning_test.ipynb  test.ipynb
process_runs/: __init__.py  process_data.py  run_retriever.py
process_runs/api/: __init__.py  strava.py  visual_crossing.py
rust_sim/: Cargo.toml
rust_sim/src/: constants.rs  lib.rs  main.rs  monte_carlo_simulation.rs  param_config.rs
sensitivity/: __init__.py  main.py  sensitivity_shap.py
simulation/: __init__.py  data_classes.py  monte_carlo_simulation.py  pacing_strategy.py
src/: __init__.py  main_runs.py  main_simulation.py  main_simulations.py  main_trainings.py  run_simulation.py
src/model_training/: __init__.py  model_fitter.py
src/process_runs/: process_data.py  run_retriever.py
tests/: __init__.py  basic_data.py  test_unit.py  test_unit.rs
utilis/: __init__.py  helper.py
(+9 files in other folders)
