[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marathon_simulation"
version = "0.1.0"

[tool.setuptools]
# This tells setuptools to automatically find all packages and sub-packages
packages = { find = { where = ["."], include = ["*"] } }

[tool.ruff]
lint.extend-select = ["ALL"]
lint.ignore = ["T201", "S101", "PLR2004", "PD002", "G004", "PGH004", "D203", "D213"]
line-length = 150
extend-exclude = ["*.ipynb"]