[package]
name = "rust_sim"
version = "0.1.0"
edition = "2021"

[lib]
name = "stride_sim_rust"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
once_cell = "1"
uom = "0.38.0"
arrow-array = "53"
arrow-schema = "53"
parquet = { version = "53", features = ["arrow"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
debug = true

[[test]]
name = "unit_tests"
path = "../tests/test_unit.rs"